cmake_minimum_required(VERSION 2.8.12)
project(AlgorithmsTests)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(GTest REQUIRED)
set(SRC_HEADERS ../src/headers/)
FILE(GLOB SRC_CPP "../src/cpp/*.cpp")
set(TEST_HEADERS "./testunits/")
include_directories(${GTEST_INCLIDE_DIRS} ${SRC_HEADERS} ${TEST_HEADERS})
set(SOURCE_FILES main.cpp)
add_executable(AlgorithmsTests ${SOURCE_FILES} ${SRC_CPP})
target_link_libraries(AlgorithmsTests ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} pthread)